# TeleOpen-VPN-Client

./: .gitignore  AndroidManifest.xml  HysteriaTunVpnService.kt  LICENSE  MainActivity.kt  NativeExtensions.kt  PRIVACY_POLICY.txt  README.md  app_build.gradle.kts  build.gradle.kts  ios_theme.dart  main.dart  pubspec.yaml  resign_v1.sh  vpn_bridge.dart
android/: gradle.properties  key.properties.example  settings.gradle.kts
android/app/src/main/jni/: .gitignore  CMakeLists.txt  README.md  build_ciadpi.sh  ciadpi_jni.c
lib/: ios_theme.dart  main.dart  vpn_bridge.dart
linux/: CMakeLists.txt
logic/: ai_fixer.dart  crash_log.dart  diagnostics.dart  geolocation.dart  hysteria2.dart  market_api.dart  parsers.dart  ping.dart  speed_benchmark.dart  subscriptions.dart  telegram_proxy.dart  theme_storage.dart
models/: market.dart  mtproto_proxy.dart  per_app_proxy.dart  theme.dart  vpn_node.dart
screens/: add_subscription_screen.dart  admin_panel_screen.dart  author_panel_screen.dart  diagnostics_screen.dart  dns_leak_test_screen.dart  dns_screen.dart  external_controller_screen.dart  fix_server_screen.dart  home_screen.dart  local_ports_screen.dart  log_screen.dart  login_screen.dart  market_detail_screen.dart  market_screen.dart  meta_features_screen.dart  mtproto_proxy_screen.dart  network_screen.dart  per_app_proxy_screen.dart  proxy_visibility_screen.dart  publish_screen.dart  settings_screen.dart  share_screen.dart  speed_test_screen.dart  statistics_screen.dart  theme_gallery_screen.dart  themes_screen.dart  tls_tricks_screen.dart  warp_screen.dart  world_map_screen.dart
test/: ai_fixer_test.dart  app_settings_test.dart  failover_test.dart  happ_decrypt_test.dart  kill_switch_logic_test.dart  mtproto_proxy_test.dart  parsers_test.dart  per_app_preset_test.dart  privacy_cert_test.dart  probe_decision_test.dart  region_code_test.dart  speed_benchmark_test.dart  (+2 more)
(+141 files in other folders)
